Set up spatial mixer for GitHub/Netlify deployment - Create main index.html entry point for spatial-mixer - Update root netlify.toml with spatial-mixer redirects - Update main index.html to show Spatial Mixer as LIVE - Spatial mixer accessible at /spatial-mixer/

--- a/netlify.toml
+++ b/netlify.toml
@@ -10,7 +10,12 @@
 
 [[redirects]]
   from = "/spatial-mixer"
-  to = "/spatial-mixer/"
+  to = "/spatial-mixer/interactive-audio-hover/player.html"
+  status = 301
+
+[[redirects]]
+  from = "/spatial-mixer/"
+  to = "/spatial-mixer/interactive-audio-hover/player.html"
   status = 301
 
 # Headers for better performance
