Fix spatial mixer 404 error - Copy player.html to spatial-mixer/index.html for direct access - Update script paths to use correct relative paths - Fix config.json path resolution - Simplify Netlify redirects

--- a/netlify.toml
+++ b/netlify.toml
@@ -10,12 +10,7 @@
 
 [[redirects]]
   from = "/spatial-mixer"
-  to = "/spatial-mixer/interactive-audio-hover/player.html"
-  status = 301
-
-[[redirects]]
-  from = "/spatial-mixer/"
-  to = "/spatial-mixer/interactive-audio-hover/player.html"
+  to = "/spatial-mixer/"
   status = 301
 
 # Headers for better performance
