Integrate AV Sync Mixer into GitHub hosted version
- Add links to AV Sync Mixer Builder and Player on landing page
- Add redirect rule for /av-sync-player in netlify.toml
- Tool now accessible from main toolkit landing page

--- a/netlify.toml
+++ b/netlify.toml
@@ -13,6 +13,11 @@
   to = "/spatial-mixer/"
   status = 301
 
+[[redirects]]
+  from = "/av-sync-player"
+  to = "/av-sync-player/"
+  status = 301
+
 # Headers for better performance
 [[headers]]
   for = "/*"
