Fix Netlify routing for av-sync-player
- Add explicit redirects to serve index.html for /av-sync-player
- Ensure proper routing for directory access

--- a/netlify.toml
+++ b/netlify.toml
@@ -15,8 +15,13 @@
 
 [[redirects]]
   from = "/av-sync-player"
-  to = "/av-sync-player/"
+  to = "/av-sync-player/index.html"
   status = 301
+
+[[redirects]]
+  from = "/av-sync-player/"
+  to = "/av-sync-player/index.html"
+  status = 200
 
 # Headers for better performance
 [[headers]]
